<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Y3M Viagem Tranquila</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="opcao">Melhor Opção de Combustível</string>
    <string name="gasto">Gasto por Percurso</string>
    <string name="emergencia">Números de Emergência</string>
    <string name="dicas">Dicas de Viagem</string>
    <string name="title_activity_gasto">Gasto por Percurso</string>
    <string name="texto1">Quantos quilômetros você pretende viajar?</string>
    <string name="digite1">Digite os quilômetros aqui&#8230;</string>
    <string name="voltar">Voltar</string>
    <string name="texto2">Quantos quilômetros o seu veículo faz com 1 litro de combustível?</string>
    <string name="texto3">Qual é o preço médio do combustível utilizado?</string>
    <string name="digite2">Digite o preço aqui&#8230;</string>
    <string name="limpar">Limpar</string>
    <string name="calcular">Calcular</string>
    <string name="title_activity_resultado_gasto">Gasto por Percurso</string>
    <string name="totalLitros">Total de litros que serão consumidos:</string>
    <string name="boaViagem">A Y3M te deseja uma boa viagem!</string>
    <string name="title_activity_ligacoes">Números de Emergência</string>
    <string name="pm">190 - Polícia Militar</string>
    <string name="pr">191 - Polícia Rodoviária</string>
    <string name="ambulancia">192 - Ambulância</string>
    <string name="bombeiro">193 - Bombeiro</string>
    <string name="volta">Voltar</string>
    <string name="title_activity_melhor_opcao">Melhor Opção Combustível</string>
    <string name="vlAlcool">Valor Álcool</string>
    <string name="vlAlc">Valor do Álcool</string>
    <string name="vlAl"></string>
    <string name="vlGas">Valor da Gasolina</string>
    <string name="vlGa"></string>

</resources>