<?xml version="1.0" encoding="utf-8"?>
 
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">
 
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

	    <TextView
	        android:id="@+id/textViewTotalLitros"
	        android:layout_width="300dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/texto1"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <EditText
	        android:id="@+id/editTextKmViagem"
	        android:layout_width="292dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:ems="10"
	        android:hint="@string/digite1"
	        android:inputType="number|numberDecimal"
	        android:maxLength="7" />

	    <TextView
	        android:id="@+id/textViewKmLitro"
	        android:layout_width="303dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="31dp"
	        android:text="@string/texto2"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <EditText
	        android:id="@+id/editTextKmLitro"
	        android:layout_width="297dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:ems="10"
	        android:hint="@string/digite1"
	        android:inputType="number|numberDecimal"
	        android:maxLength="7" />

	    <TextView
	        android:id="@+id/textViewPrecoMedio"
	        android:layout_width="303dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="32dp"
	        android:text="@string/texto3"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <EditText
	        android:id="@+id/editTextPrecoMedio"
	        android:layout_width="288dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:ems="10"
	        android:hint="@string/digite2"
	        android:inputType="number|numberDecimal"
	        android:maxLength="7" />

	    <Button
	        android:id="@+id/buttonCalcular"
	        android:layout_width="134dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:onClick="calcularGasto"
	        android:text="@string/calcular" />

	    <Button
	        android:id="@+id/buttonLimpar"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="134dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:onClick="limparCaixasDeTexto"
	        android:text="@string/limpar" />

	    <Button
	        android:id="@+id/buttonVoltar"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="134dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:onClick="voltar"
	        android:text="@string/voltar" />

	</LinearLayout>

</ScrollView>