<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="horizontal|vertical"
    tools:context=".LigacoesActivity" >

    <Button
        android:id="@+id/button190"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:hint="@string/pm"
        android:onClick="ligarParaPoliciaMilitar"
        android:text="@string/pm" />

    <Button
        android:id="@+id/button191"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button190"
        android:layout_marginTop="20dp"
        android:hint="@string/pr"
        android:onClick="ligarParaPoliciaRodoviaria"
        android:text="@string/pr" />

    <Button
        android:id="@+id/button193"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button192"
        android:layout_marginTop="20dp"
        android:hint="@string/bombeiro"
        android:onClick="ligarParaBombeiro"
        android:text="@string/bombeiro" />

    <Button
        android:id="@+id/buttonVolta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button193"
        android:layout_marginTop="24dp"
        android:hint="@string/volta"
        android:onClick="voltar"
        android:text="@string/volta" />

    <Button
        android:id="@+id/button192"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button191"
        android:layout_marginTop="20dp"
        android:onClick="ligarParaAmbulancia"
        android:text="@string/ambulancia" />

</RelativeLayout>